<resources>
    <string name="app_name" translatable="false">ESP32 Connect</string>
    <string name="button_connect">Connect</string>
    <string name="button_retry">Retry</string>
    <string name="error_network_disconnected">Network disconnected…</string>
    <string name="title_settings">Settings</string>
    <string name="pref_address">Address</string>
    <string name="pref_ssid">WiFi Name (SSID)</string>
    <string name="pref_address_value" translatable="false">http://192.168.4.1</string>
    <string name="pref_server">Access Point</string>
    <string name="pref_address_description">Enter the name for the access point.</string>
    <string name="pref_password">WiFi Password</string>
    <string name="pref_password_description">Enter the password for the access point.</string>
    <string name="toast_network_connected">Network connected…</string>
    <string name="button_send">Send</string>
    <string name="button_disconnect">Disconnect</string>
    <string name="activity_logs">Logs</string>
    <string name="activity_settings">Options</string>
    <string name="alert_title_error">Error</string>
    <string name="toast_blak_value">The value not be blank...</string>
    <string name="scan">Scan for networks</string>
    <string name="button_state">Send state</string>
    <string name="button_text">Send text</string>
    <string name="error_empty_address">The network address is empty, please enter the address in the settings.</string>
    <string name="select_image">Select Image</string>
    <string name="connect">CONNECT</string>
    <string name="send_text">Send Text</string>
    <string name="select_png">Select PNG</string>
    <string name="select_raw">Select RAW</string>
    <string name="scan_for_ips_in_network">Scan for IPs in network</string>
    <string name="choose_a_command_to_send">Choose a command to send</string>
    <string name="pick_an_image_from_gallery">Pick an image from gallery</string>
    <string name="set_subnet_and_scan_for_reachable_devices">Set subnet and scan for reachable devices</string>
    <string name="get_the_list_of_all_wifi_networks_around">Get the list of all WiFi networks around</string>
    <string name="send_command_to_mute_device">Send command to mute device</string>
    <string name="silent_esp">Silent ESP</string>
    <string name="check_charge">Check charge</string>
    <string name="get_the_remaining_charge_of_the_device">Get the remaining charge of the device</string>
    <string name="center_y">Center Y</string>
    <string name="center_x">Center X</string>
    <string name="transparent">Transparent</string>
    <string name="white_text">White Text</string>
    <string name="ip">IP:</string>
    <string name="port">Port:</string>
    <string name="invert_image">Invert Image</string>
    <string name="colored_image">Colored Image</string>
    <string name="set_text_to_display">Set text to display</string>
    <string name="send_text_com">Send Text</string>
</resources>
