<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="40dp"
            android:paddingBottom="16dp">

            <LinearLayout
                android:id="@+id/wifi_scan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/buttonshape"
                style="@style/SettingsButtonStyle"
                android:gravity="start"
                android:orientation="vertical">

                <TextView
                    style="@style/TextMedium.Bold"
                    android:layout_marginLeft="12dp"
                    android:layout_marginStart="12dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/scan"/>

                <TextView
                    android:id="@+id/scan_wifi_sub"
                    style="@style/TextSmall"
                    android:layout_marginLeft="12dp"
                    android:layout_marginStart="12dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/get_the_list_of_all_wifi_networks_around"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/IPs_scan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/buttonshape"
                style="@style/SettingsButtonStyle"
                android:gravity="start"
                android:orientation="vertical">

                <TextView
                    style="@style/TextMedium.Bold"
                    android:layout_marginLeft="12dp"
                    android:layout_marginStart="12dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/scan_for_ips_in_network"/>

                <TextView
                    android:id="@+id/scan_ip_sub"
                    style="@style/TextSmall"
                    android:layout_marginLeft="12dp"
                    android:layout_marginStart="12dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/set_subnet_and_scan_for_reachable_devices"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/sendImageBut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                style="@style/SettingsButtonStyle"
                android:layout_marginTop="10dp"
                android:background="@drawable/buttonshape"
                android:gravity="start"
                android:orientation="vertical">

                <TextView
                    style="@style/TextMedium.Bold"
                    android:layout_marginLeft="12dp"
                    android:layout_marginStart="12dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Send Image"/>

                <TextView
                    android:id="@+id/pick_image"
                    style="@style/TextSmall"
                    android:layout_marginLeft="12dp"
                    android:layout_marginStart="12dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pick_an_image_from_gallery"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/sendCmds"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/SettingsButtonStyle"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/buttonshape"
                android:gravity="start"
                android:orientation="vertical">

                <TextView
                    style="@style/TextMedium.Bold"
                    android:layout_marginLeft="12dp"
                    android:layout_marginStart="12dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Send Commands"/>

                <TextView
                    android:id="@+id/send_cmd_text"
                    style="@style/TextSmall"
                    android:layout_marginLeft="12dp"
                    android:layout_marginStart="12dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/choose_a_command_to_send"/>

            </LinearLayout>


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>